# biocatalysis-model

./: .gitignore  LICENSE  README.md  conda.yml  mypy.ini  requirements.txt  requirements_conda.txt  setup.cfg  setup.py  test_requirements.txt
data/: molecules.txt  patterns.txt
rxn_biocatalysis_tools/: __init__.py  chemical_reaction.py  enzymatic_reaction.py  tokenizer.py  utils.py
test/: __init__.py  test_enzymatic_reaction.py  test_tokenizer.py
