[metadata]
name = rxn-biocatalysis-tools
version = attr: rxn_biocatalysis_tools.__version__
description = Tools for pre-processing and evaluating data associated with biocatalysis models.
author = Daniel Probst, Matteo Manica, Yves Gaetan Nana @ IBM
author_email = dpr@zurich.ibm.com, tte@zurich.ibm.com, yna@zurich.ibm.vom
url = https://github.com/rxn4chemistry/biocatalysis-model
long_description_content_type = text/markdown
long_description = file: README.md
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
zip_safe = False
packages = find:
include_package_data = true
scripts =
    bin/rbt-canonicalize.py
    bin/rbt-evaluate.py
    bin/rbt-extract.py
    bin/rbt-preprocess.py
    bin/rbt-randomize-ec.py

[options.extras_require]
dev =
    pytest==6.1.2
    pytest-cov==2.10.1
    flake8==3.8.4
    black==20.8b1
    mypy==0.782

[yapf]
based_on_style = pep8
blank_line_before_nested_class_or_def = true
indent_dictionary_value = true
dedent_closing_brackets = true
column_limit = 99

[mypy]
ignore_missing_imports = true

[flake8]
extend-ignore = E501
exclude = __init__.py